--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>GitHub link generated</h1>
-    <a href="index.hbs">click me</a>
+    <a href="/index.hbs">click me</a>
 </body>
 </html>
